# burst-shape

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  DEPLOY.md  Dockerfile  LICENSE  README.md  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
notebooks/: tutorial.ipynb
scripts/: 001_download_wagenaar_data.py  001b_download_kapucu_data.py  001c_load_hommersom_test.py  001c_test_load_Hommersom.py  001f_load_hommersom.py  001g_load_hommersom_binary.py  001h_load_mossink_KS_MELAS.py  0021_split_cross_validation.py  002_extract_bursts.py  002b_extract_bursts_kapucu.py  002c_extract_bursts_hommersom.py  002c_extract_bursts_hommersom_test.py  002c_extract_bursts_kapucu.py  002d_extract_bursts_inhibblock.py  002e_extract_bursts_mossink.py  002f_extract_bursts_hommersom.py  002x_review_burst_detection.py  002xy_firing_rate_threshold.py  002y_summary_statistics.py  003_plot_example_bursts.py  003_spectral_clustering.py  003_split_cross_validation.py  004_plot_example_bursts.py  004_spectral_clustering.py  005_plot_clusters.py  005_spectral_clustering.py  005a_spectral_clustering.py  005b_agglomerative_clustering.py  006_pca.py  006_plot_clusters.py  007_pca.py  007_spectral_clustering.py  007_tsne.py  008_tsne.py  009_cross_validation.py  010_compute_tsne.py  010_plot_like_wagenaar.py  010a_spectral_embedding.py  011_interactive_tsne.py  020_cross_validation.py  (+46 more)
scripts/1_preprocessing/: 001_download_wagenaar_data.py  001b_download_kapucu_data.py  001c_load_hommersom_test.py  001d_preload_inhibblock.py  001e_test_load_mossink.py  001f_load_hommersom.py  001g_load_hommersom_binary.py  001h_load_mossink_KS_MELAS.py  001i_load_human_slice.py  001i_load_organoids.py  001j_load_organoids.py  002_extract_bursts_wagenaar.py  002_extract_bursts_wagenaar_supplementary.py  002b_extract_bursts_kapucu.py  002c_extract_bursts_hommersom_test.py  002d_extract_bursts_inhibblock.py  002e_extract_bursts_mossink.py  002f_extract_bursts_hommersom.py  002g_extract_bursts_hommersom.py  002i_extract_bursts_human_slice.py  002xy_firing_rate_threshold.py  002zz_manually_remove_outlier.py
scripts/2_interactive_tools/: 002x_review_burst_detection.py  011_explore_embeddings.py
scripts/3_average_bursts/: 031b_plot_average_burst_shape.py  031c_average_burst_shape_traditional.py  033c_plot_recording_distances.py  033d_plot_subject_distances.py
scripts/4_embedding/: 005a_spectral_clustering.py  005a_spectral_embedding_clustering.py  010_compute_tsne.py  50_plot_embedding.py
scripts/5_ml_prediction/: 034_ml_prediction.py  035_ml_prediction_new.py  036_ml_xgboost_embedding_coord.py  037_xgboost.py  038_plot_accuracies.py  038b_plot_accuracies_supplementary.py  039_plot_shapley_values.py  080_prediction_knn_voting_loo_cv.py  081_prediction_knn_voting_cv.py  082_hommersom_predict_other_knn.py
scripts/6_other/: 002y_summary_statistics.py  003_verify_burst_detection.py  004_supplementary_number_of_participating_electrodes.py  060_classical_group_difference.py  Fig_Suppl_BurstCorr.ipynb  Fig_Suppl_ExampleEmbeddings.ipynb  (+3 more)
src/: __init__.py  folders.py  plot.py  settings.py
(+91 files in other folders)
