[project]
name = "burst-shape"
version = "0.1.0"
description = "Data-driven burst shape analysis for functional phenotyping of neuronal cultures"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = "==3.13.*"
# Core deps: required by burst_shape modules everywhere (incl. the Dash web apps).
dependencies = [
    "matplotlib>=3.10.8",
    "met-brewer~=1.0.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

# PEP 735 groups. `uv sync` installs default-groups locally; the Docker image
# picks only `web` via `uv sync --no-default-groups --group web`.
[dependency-groups]
web = [
    "dash~=2.18.2",
    "dash-extensions~=1.0.20",
    "flask==3.0.3",
    "gunicorn==23.0.0",
    "plotly-resampler~=0.10.0",
    "pytz>=2024.1",  # plotly-resampler 0.10 imports pytz but doesn't declare it
    "werkzeug==3.0.3",
]
analysis = [
    "baycomp>=1.0.3",
    "numba>=0.65.0",
    "ray>=2.54.1",
    "scikit-learn>=1.8.0",
    "shap>=0.50.0",
    "statsmodels>=0.14.6",
    "tqdm~=4.66.1",
    "xgboost>=3.2.0",
]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.4.0",
    "ruff>=0.15",
]
# Tooling to run notebooks/tutorial.ipynb (Jupyter + an interactive kernel).
notebook = [
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "jupyterlab>=4.2",
]

[tool.uv]
# `notebook` is opt-in (`uv sync --group notebook`) so the Jupyter stack is not
# pulled into web/CI installs.
default-groups = ["web", "analysis", "dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burst_shape"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), isort (I), and bugbear (B)
select = ["E", "F", "W", "I", "B"] # "UP"
# ignore = ["E203"] # black compatibility

[tool.ruff.lint.per-file-ignores]
# Figure notebooks: imports in later cells / after code
"scripts/6_other/Fig_Suppl_*.ipynb" = ["E402"]

[tool.ruff.format]
quote-style = "double" # match black behavior
